MaxVectorSize set wrongly when UseAVX=3 is specified after JDK-8221092

XMLWordPrintable

    • 14
    • b25
    • x86
    • generic
    • Not verified

        On Skylake platform the JVM by default sets the UseAVX level to 2 and accordingly sets MaxVectorSize to 32 bytes as per JDK-8221092.
        When the user explicitly want to use AVX3 on skylake platform they need to invoke the JVM with -XX:UseAVX=3 command line argument. This should aumatically result in MaxVectorSize being set to 64 bytes. However post JDK-8221092, when -XX:UseAVX=3 is given on command line, the MaxVectorSize is being wrongly set to 16 bytes.

              Assignee:
              Sandhya Viswanathan
              Reporter:
              Sandhya Viswanathan
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: