8234610: MaxVectorSize set wrongly when UseAVX=3 is specified after JDK-8221092

Reviewed-by: kvn, vlivanov